--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "@radix-ui/themes": "^3.2.1",
+    "@uiw/react-md-editor": "^4.0.7",
     "classnames": "^2.5.1",
     "next": "15.3.2",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "rehype-sanitize": "^6.0.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
