--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@prisma/client": "^6.8.2",
     "@radix-ui/themes": "^3.2.1",
     "@uiw/react-md-editor": "^4.0.7",
+    "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "next": "15.3.2",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "rehype-sanitize": "^6.0.0",
     "zod": "^3.25.28"
