--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "rehype-sanitize": "^6.0.0",
     "zod": "^3.25.28"
   },
