--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
