--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@tanstack/react-query": "^5.80.7",
     "@uiw/react-md-editor": "^4.0.7",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
