--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.1.2",
     "rehype-sanitize": "^6.0.0",
     "zod": "^3.25.28"
   },
