chore: rename project to Tracksy and enhance package.json metadata

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://user:password@localhost:3306/issue-tracker"
+DATABASE_URL="mysql://user:password@localhost:3306/tracksy"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=secret
 GOOGLE_CLIENT_ID=secret
