--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,3 +5,9 @@ onlyBuiltDependencies:
   - prisma
   - sharp
   - unrs-resolver
+
+overrides:
+  axios@>=1.0.0 <1.12.0: ">=1.12.0"
+  form-data@>=4.0.0 <4.0.4: ">=4.0.4"
+  js-yaml@>=4.0.0 <4.1.1: ">=4.1.1"
+  mdast-util-to-hast@>=13.0.0 <13.2.1: ">=13.2.1"
